   anaglyph glasses (aka red/blue) compatible images
 * Support in deinterlacing filter for most 4:2:0, 4:2:2, 4:4:4 YUV formats
   and for bits depth higher than 8bits (like 10bits)
 * Improvements on the transform filter, to support 10bits and RGB formats
 * Revival of the openCV and openCV example filters
 * ARM NEON acceleration of chroma filters

Stream Output:
 * Extended support for recording, notably for MKV and AVI
 * Options support for AVIO output module
 * Livehttp places more accurate segments durations in playlist
 * Livehttp allows setting cachin-variable in playlist
 * Livehttp stream encryption support
 * Livehttp supports changing encryption key and uri on segment change with key-loadfile option
 * Added chromaprint based audio fingerprinting

Fingerprinters:
 * Add AcoustID/Musicbrainz based fingerprinter

Interfaces:
 * configurable password for the HTTP server
 * .hosts removed from the HTTP server
 * fix Lua command line interface console mode under Windows
 * Better support for MCE remotes on Windows
 * Hotkey support for TS program selection
 * Rewrite of D-Bus inhibit interface
 * Improvements on motion sensing interface, fix orientation, move out
   rotate mode into the rotate video filter

Services discovery:
 * UPnP A/V subtitles
 * Support for multiple UPnP resources on a single item

OS X Interface:
 * Add support for multiple video outputs
 * Add accessibility support to playback windows, open panel and fullscreen
   controller
 * Add a GUI to manage podcasts
 * Add a new panel for media conversation and streaming
 * Add a GUI for the QTSound access input to process audio captured locally
   - This also allows to capture input from a webcam and a mic at the same time
 * Add a GUI to capture QTSound data along with the current screen content
 * Add an option to let the Apple Remote control the system volume instead of
   VLC's internal volume level
 * Add a new Subtitles menu to change Subtitles and their properties during
   playback